2007-02-06  Brian Warner  <warner@lothar.com>

	* buildbot/master.py (BotPerspective.__repr__): fit bitrot, the
	attributes this uses went away

	* contrib/bb_applet.py (MyApplet.filled): add a small prefs
	dialog, to allow you to reset the buildmaster and force
	connect/disconnect. Correctly handle losing the buildmaster
	connection (by switching the display to the hexnut, at which point
	you can use the 'Connect' menu item to reconnect).

	* buildbot/steps/source.py (Source.start): if we're using a patch,
	add it as a LogFile to the checkout/update step. This will turn
	into a link on the waterfall page.

	* buildbot/scripts/tryclient.py (Try.createJob): implement --diff
	option, to take the patch from a pre-made file rather than
	generating it from the local tree. Thanks to Robert Helmer for the
	idea. Closes #15 (the Trac ticket on the new http://buildbot.net/).
	* buildbot/scripts/runner.py (TryOptions): add --diff,
	--patchlevel, and --baserev options
	* buildbot/scheduler.py (Try_Jobdir.parseJob): treat a baserev of ""
	as None, meaning HEAD.
	* buildbot/sourcestamp.py (SourceStamp): update docstring to
	indicate that baserev=None means HEAD
	* docs/buildbot.texinfo (try --diff): document it

	* buildbot/test/test_steps.py (BuildStep): remove use of
	reactor.iterate(), although the technique I replaced it with is a
	gross polling hack that must be cleaned up properly some day. This
	was the last use of reactor.iterate in the entire tree, yay.

2007-02-05  Brian Warner  <warner@lothar.com>

	* buildbot/status/mail.py (MailNotifier.__init__): assert that 'mode'
	is one of the three known values, otherwise we emit some confusing
	messages later on. Thanks to Grig Gheorghiu for the catch.

2007-01-30  Brian Warner  <warner@lothar.com>

	* buildbot/changes/bonsaipoller.py (BonsaiParser.__init__): Ben
	Hearsum contributed a patch to let BonsaiPoller work with results
	that contain non-ascii characters. Closes SF#1632641.
